--- a/style.css
+++ b/style.css
@@ -1,119 +1,122 @@
-*{
-    list-style-type: none;
-    overflow: hidden;
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
+
+* {
+  list-style-type: none;
+  overflow: hidden;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #0b0650;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #0b0650;
 }
-main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-li{
-    width: 200px;
-    height: 200px;
-    border-radius: 5px;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-
+li {
+  width: 200px;
+  height: 200px;
+  border-radius: 5px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-family: "Indie Flower", cursive;
 }
 
 li > div {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10rem;
 }
 
-ul{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: .4rem;
-    padding: 0;
+ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0.4rem;
+  padding: 0;
 }
 
-h1{
-    color: white
+h1 {
+  color: white;
 }
 
-.active-circle{
-    width: 120px;
-    height: 120px;
+.active-circle {
+  width: 120px;
+  height: 120px;
 
-    border-radius: 100%;
-    border: solid 15px #0b0650;
-    
+  border-radius: 100%;
+  border: solid 15px #0b0650;
 }
 
-.active-square{
-    width: 120px;
-    height: 120px;
+.active-square {
+  width: 120px;
+  height: 120px;
 
-    border-radius: 5px;
-    border: solid 15px #0b0650;
+  border-radius: 5px;
+  border: solid 15px #0b0650;
 }
 
-#escolha-jogador{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
+#escolha-jogador {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.btn{
-    width: 6rem;
-    height: 3rem;
-    border: none;
-    color: white;
-    border-radius: 10px;
-    cursor: pointer;
-    
+.btn {
+  width: 6rem;
+  height: 3rem;
+  border: none;
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
-.azul{
-    background-color: blue;
+.azul {
+  background-color: blue;
 }
-.vermelho{
-    background-color: red;
+.vermelho {
+  background-color: red;
 }
 
-.area-botao{
-    display: flex;
-    gap: 1rem;
+.area-botao {
+  display: flex;
+  gap: 1rem;
 }
 
 @media (max-width: 600px) {
-    li{
-        width: 110px;
-        height: 110px;
-    }
-    h1{
-        font-size: 1.67rem;
-    }
-    .active-circle{
-        border: solid 8px;
-        width: 60px;
-        height: 60px;
-    }
-    .active-square{
-        border: solid 8px;
-        width: 60px;
-        height: 60px;
-    }
+  li {
+    width: 110px;
+    height: 110px;
+  }
+  h1 {
+    font-size: 1.67rem;
+  }
+  .active-circle {
+    border: solid 8px;
+    width: 60px;
+    height: 60px;
+  }
+  .active-square {
+    border: solid 8px;
+    width: 60px;
+    height: 60px;
+  }
 }
