--- a/style.css
+++ b/style.css
@@ -81,12 +81,13 @@ h1 {
 }
 
 .btn {
-  width: 6rem;
+  min-width: 6rem;
   height: 3rem;
   border: none;
   color: white;
   border-radius: 10px;
   cursor: pointer;
+  padding: 1rem;
 }
 
 .azul {
@@ -94,6 +95,10 @@ h1 {
 }
 .vermelho {
   background-color: red;
+}
+
+.azul-claro {
+  background-color: rgb(34, 140, 238);
 }
 
 .area-botao {
